--- a/.github/workflows/newwrk.yml
+++ b/.github/workflows/newwrk.yml
@@ -81,7 +81,7 @@ jobs:
       - name: Check Ansible Configuration and set it accordingly
         id: check_string
         run: |
-          if grep -q "inventory" /etc/ansible/ansible.cfg; then
+          if grep -q "inventory" /etc/ansible/ansible.cfg;
             echo "Dynamic inventory defined"
             echo "::set-output name=string_found::true"
           else
