--- a/.github/workflows/newwrk.yml
+++ b/.github/workflows/newwrk.yml
@@ -59,7 +59,8 @@ jobs:
         run: |
            sudo mkdir -p /opt/ansible/inventory
            cd /opt/ansible/inventory
-           if [ -f aws_ec2.yaml]; then
+           FILE = aws_ec2.yaml
+           if test -f "$FILE"; then
                 echo "Dynamic inventory already setup"
                 echo "::set-output name=file_exists::true"
            else
@@ -74,7 +75,7 @@ jobs:
                         instance-state-name : running
                         tag:type: mywinnode
                      compose:
-                       ansible_host: public_ip_address"| sudo tee -a aws_ec2.yaml
+                       ansible_host: public_ip_address" | sudo tee -a aws_ec2.yaml
                 cat aws_ec2.yaml
            fi
                 
