--- a/.github/workflows/newwrk.yml
+++ b/.github/workflows/newwrk.yml
@@ -82,7 +82,7 @@ jobs:
       - name: Check Ansible Configuration and set it accordingly
         id: check_string
         run: |
-          if grep -q "inventory" /etc/ansible/ansible.cfg;
+          if grep -q "inventory" /etc/ansible/ansible.cfg;then
             echo "Dynamic inventory defined"
             echo "::set-output name=string_found::true"
           else
