--- a/.github/workflows/newwrk.yml
+++ b/.github/workflows/newwrk.yml
@@ -59,7 +59,7 @@ jobs:
         run: |
            sudo mkdir -p /opt/ansible/inventory
            cd /opt/ansible/inventory
-           if -f "aws_ec2.yaml"; then
+           if [ -f "aws_ec2.yaml" ]; then
                 echo "Dynamic inventory already setup"
                 echo "::set-output name=file_exists::true"
            else
