--- a/.github/workflows/newwrk.yml
+++ b/.github/workflows/newwrk.yml
@@ -96,3 +96,17 @@ jobs:
       - name: Check the dynamic inventory 
         run: |
            ansible all --list-hosts
+           
+      - name: Generate host file for dynamic inventory
+        run: |
+          cd /etc/ansible
+          sudo chmod +x inventory.sh
+          sudo sh inventory.sh
+          #Print inventory
+          cat inventory.ini
+ 
+
+      - name: Run Ansible playbook
+        run: |
+           ansible -i /etc/ansible/inventory.ini -m win_ping win
+           ansible-playbook -i /etc/ansible/inventory.ini windowsplaybook.yaml
