--- a/.github/workflows/newwrk.yml
+++ b/.github/workflows/newwrk.yml
@@ -117,7 +117,7 @@ jobs:
           else
           echo "Hosts file not found: $hosts_file"
           fi
-          echo 'This is a dynamically created shell script' " |sudo tee -a hostgen.sh 
+          echo "This is a dynamically created shell script"" |sudo tee -a hostgen.sh 
            
       - name: Generate host file for dynamic inventory
         run: |
