--- a/.github/workflows/newwrk.yml
+++ b/.github/workflows/newwrk.yml
@@ -102,8 +102,8 @@ jobs:
         run: |
           echo "#!/bin/bash
           'ansible-inventory --list|grep -o '"public_ip_addreansibless": "[^"]*'|awk -F': "' '{print $2}'' > hosts.txt
-          'hosts_file="hosts.txt"'
-          'inventory_file="inventory.ini"'
+          hosts_file="hosts.txt"
+          inventory_file="inventory.ini"
           # Check if the hosts file exists
           if [ -f "$hosts_file" ]; then
           # Create an inventory file
