--- a/.github/workflows/script.yml
+++ b/.github/workflows/script.yml
@@ -59,7 +59,7 @@ jobs:
         id: create_script
         run: |
           echo "#!/bin/bash
-          'ansible-inventory --list|grep -o '"public_ip_addreansibless": "[^"]*'|awk -F': "' '{print $2}'' > hosts.txt
+          ansible-inventory --list|grep -o '"public_ip_addreansibless": "[^"]*'|awk -F': "' '{print $2}' > hosts.txt
           hosts_file="hosts.txt"
           inventory_file="inventory.ini"
           # Check if the hosts file exists
@@ -74,4 +74,5 @@ jobs:
           echo "Inventory file generated: $inventory_file"  
           else
           echo "Hosts file not found: $hosts_file"
-          fi" > hostgen.sh 
+          fi
+          echo "End of scritp""| sudo tee -a hostgen.sh 
