--- a/.github/workflows/script.yml
+++ b/.github/workflows/script.yml
@@ -59,7 +59,7 @@ jobs:
         id: create_script
         run: |
           echo "#!/bin/bash
-          ansible-inventory --list|grep -o '"public_ip_addreansibless": "[^"]*'|awk -F': "' '{print $2}' > hosts.txt
+          'ansible-inventory --list|grep -o '"public_ip_addreansibless": "[^"]*'|awk -F': "' '{print $2}'' > hosts.txt
           hosts_file="hosts.txt"
           inventory_file="inventory.ini"
           # Check if the hosts file exists
