--- a/.github/workflows/script.yml
+++ b/.github/workflows/script.yml
@@ -55,24 +55,23 @@ jobs:
            sudo apt-get update && sudo apt-get install python3-pip -y
            sudo apt-get install python3-winrm -y && sudo sudo pip3 install boto3
          
-      - name: Create Shell Script
+      - name: Create host file for generated dynamic inventory
         id: create_script
         run: |
-          echo "'#!/bin/bash
-          'ansible-inventory --list|grep -o '"public_ip_addreansibless": "[^"]*'|awk -F': "' '{print $2}'' > hosts.txt
+          ansible-inventory --list|grep -o '"public_ip_address": "[^"]*'|awk -F': "' '{print $2}' > hosts.txt
           hosts_file="hosts.txt"
           inventory_file="inventory.ini"
+
           # Check if the hosts file exists
           if [ -f "$hosts_file" ]; then
           # Create an inventory file
-          echo "[win]" > "$inventory_file"
-          # Read the hosts from the file and append them to the inventory file
+            echo "[win]" > "$inventory_file"
+            # Read the hosts from the file and append them to the inventory file
           while IFS= read -r host
           do
           echo "$host" >> "$inventory_file"
           done < "$hosts_file"
-          echo "Inventory file generated: $inventory_file"  
+          echo "Inventory file generated: $inventory_file"
           else
           echo "Hosts file not found: $hosts_file"
           fi
-          echo "End of script""'| sudo tee -a hostgen.sh 
