--- a/.github/workflows/newwrk.yml
+++ b/.github/workflows/newwrk.yml
@@ -100,7 +100,7 @@ jobs:
         id: create_host
         run: |
           cd /etc/ansible
-          ansible-inventory --list|grep -o '"public_ip_address": "[^"]*'|awk -F': "' '{print $2}' > hosts.txt
+          ansible-inventory --list|grep -o '"public_ip_address": "[^"]*'|awk -F': "' '{print $2}' |sudo tee -a hosts.txt
           hosts_file="hosts.txt"
           inventory_file="inventory.ini"
           # Check if the hosts file exists
