--- a/.github/workflows/newwrk.yml
+++ b/.github/workflows/newwrk.yml
@@ -113,6 +113,7 @@ jobs:
           echo "$host" >> "$inventory_file"
           done < "$hosts_file"
           echo "Inventory file generated: $inventory_file"
+          sudo chmod +x $inventory_file
           else
           echo "Hosts file not found: $hosts_file"
           fi
