--- a/.github/workflows/newwrk.yml
+++ b/.github/workflows/newwrk.yml
@@ -106,7 +106,7 @@ jobs:
           # Check if the hosts file exists
           if [ -f "$hosts_file" ]; then
           # Create an inventory file
-            echo "[win]" > "$inventory_file"
+            echo "[win]" |sudo tee -a "$inventory_file"
             # Read the hosts from the file and append them to the inventory file
           while IFS= read -r host
           do
