--- a/.github/workflows/newwrk.yml
+++ b/.github/workflows/newwrk.yml
@@ -103,20 +103,21 @@ jobs:
           ansible-inventory --list|grep -o '"public_ip_address": "[^"]*'|awk -F': "' '{print $2}' |sudo tee -a hosts.txt
           hosts_file="hosts.txt"
           inventory_file="inventory.ini"
+          sudo bash -c '
           # Check if the hosts file exists
           if [ -f "$hosts_file" ]; then
           # Create an inventory file
-            echo "[win]" |sudo tee -a "$inventory_file"
+            echo "[win]" > "$inventory_file"
             # Read the hosts from the file and append them to the inventory file
           while IFS= read -r host
           do
           echo "$host" >> "$inventory_file"
-          done < sudo tee -a "$hosts_file"
+          done <"$hosts_file"
           echo "Inventory file generated: $inventory_file"
-          sudo chmod +x $inventory_file
           else
           echo "Hosts file not found: $hosts_file"
           fi
+          '
       #Otherway
       #- name: Generate host file for dynamic inventory
        # run: |
