--- a/.github/workflows/newwrk.yml
+++ b/.github/workflows/newwrk.yml
@@ -100,10 +100,10 @@ jobs:
         id: create_host
         run: |
           cd /etc/ansible
-          ansible-inventory --list|grep -o '"public_ip_address": "[^"]*'|awk -F': "' '{print $2}' |sudo tee -a hosts.txt
+          sudo bash -c '
+          ansible-inventory --list|grep -o '"public_ip_address": "[^"]*'|awk -F': "' '{print $2}' > hosts.txt
           hosts_file="hosts.txt"
           inventory_file="inventory.ini"
-          sudo bash -c '
           # Check if the hosts file exists
           if [ -f "$hosts_file" ]; then
           # Create an inventory file
