--- a/.github/workflows/newwrk.yml
+++ b/.github/workflows/newwrk.yml
@@ -96,37 +96,15 @@ jobs:
       - name: Check the dynamic inventory 
         run: |
            ansible all --list-hosts
-   
-      - name: Create host file for generated dynamic inventory
-        id: create_host
+ 
+      - name: Generate host file for dynamic inventory
         run: |
           cd /etc/ansible
-          ansible-inventory --list|grep -o '"public_ip_address": "[^"]*'|awk -F': "' '{print $2}' | sudo tee -a hosts.txt
-          hosts_file="hosts.txt"
-          inventory_file="inventory.ini"
-          # Check if the hosts file exists
-          sudo bash -c '
-          if [ -f "$hosts_file" ]; then
-          # Create an inventory file
-            echo "[win]" > "$inventory_file"
-            # Read the hosts from the file and append them to the inventory file
-          while IFS= read -r host
-          do
-          echo "$host" >> "$inventory_file"
-          done <"$hosts_file"
-          echo "Inventory file generated: $inventory_file"
-          else
-          echo "Hosts file not found: $hosts_file"
-          fi
-          '
-      #Otherway
-      #- name: Generate host file for dynamic inventory
-       # run: |
-       #  cd /etc/ansible
-        #  sudo chmod +x inventory.sh
-         # sudo sh inventory.sh
+          sudo chmod +x inventoryge.sh
+          sudo sh inventory.sh
+        shell: bash
           #Print inventory
-          #cat inventory.ini
+          cat inventory.ini
  
 
       - name: Check connectivity
