--- a/.github/workflows/newwrk.yml
+++ b/.github/workflows/newwrk.yml
@@ -101,8 +101,8 @@ jobs:
       - name: Generate host file for dynamic inventory
         run: |
           cd /etc/ansible
-          sudo chmod +x inventoryge.sh
-          sudo sh inventory.sh
+          chmod +x "${GITHUB_WORKSPACE}/.github/inventoryge.sh"
+          sudo sh inventoryge.sh
           cat inventory.ini
         shell: bash
            #Print inventory
