--- a/.github/workflows/mynew.yml
+++ b/.github/workflows/mynew.yml
@@ -108,7 +108,12 @@ jobs:
           cat inventory.ini
       - name: Configure inventory with connection variables
         run: |
-          mkdir /etc/ansible/group_vars
+          if [ -d /etc/ansible/group_vars]; then
+            echo "Variable directory exists"
+          else
+            echo "Directory does not exist"
+            mkdir /etc/ansible/group_vars
+          fi
           sudo chmod -R 777 /etc/ansible/
           echo "---
           ansible_user: ${{ secrets.WIN_USER }}
