--- a/.github/workflows/mynew.yml
+++ b/.github/workflows/mynew.yml
@@ -121,8 +121,8 @@ jobs:
           ansible_connection: winrm
           ansible_winrm_server_cert_validation: ignore
           ansible_winrm_transport: ntlm
-          ansible_winrm_port: 5986" >> inventory.ini
-          cat inventory.ini
+          ansible_winrm_port: 5986" |sudo tee -a /etc/ansible/win.yaml
+          cat win.yaml
            
       - name: Check connectivity
         run: |
