--- a/.github/workflows/mynew.yml
+++ b/.github/workflows/mynew.yml
@@ -119,8 +119,7 @@ jobs:
          else
             sudo chmod -R 777 /etc/ansible/
             cd /etc/ansible/group_vars
-            echo "---
-            ansible_user: ${{ secrets.WIN_USER }}
+            echo "ansible_user: ${{ secrets.WIN_USER }}
             ansible_password: ${{ secrets.WIN_PASSWORD }}
             ansible_connection: winrm
             ansible_winrm_server_cert_validation: ignore
