--- a/.github/workflows/mynew.yml
+++ b/.github/workflows/mynew.yml
@@ -124,9 +124,8 @@ jobs:
             ansible_connection: winrm
             ansible_winrm_server_cert_validation: ignore
             ansible_winrm_transport: ntlm
-            ansible_winrm_port: 5986" >> win.yaml
-            cat win.yaml
-          fi
+            ansible_winrm_port: 5986" > win.yaml
+         fi
 
            
       - name: Check connectivity
